force-app/main/default/objects/Treatment_Session__c/Treatment_Session__c.object-meta.xml
<CustomObject>
    <label>Treatment Session</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Treatment Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Treatment Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>