force-app/main/default/objects/Treatment_Session__c/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Treatment Sessions</relationshipLabel>
    <relationshipName>Treatment_Sessions1</relationshipName>
    <type>Lookup</type>
</CustomField>