force-app/main/default/objects/Treatment_Session__c/fields/Current_Week__c.field-meta.xml
<CustomField>
    <fullName>Current_Week__c</fullName>
    <formula>IF(Session_Date__c &gt;=
(CASE(MOD(TODAY() - DATE(1900, 1, 2), 7),
0, TODAY() +0,
1, TODAY() -1,
2, TODAY() -2,
3, TODAY() -3,
4, TODAY() -4,
5, TODAY() -5,
6, TODAY() -6,
TODAY())), TRUE, FALSE)</formula>
    <label>Current Week</label>
    <type>Checkbox</type>
</CustomField>