force-app/main/default/objects/Treatment_Session__c/fields/Current_Week_Number__c.field-meta.xml
<CustomField>
    <fullName>Current_Week_Number__c</fullName>
    <formula>IF(Session_Date__c &gt;=
(CASE(MOD(TODAY() - DATE(1900, 1, 2), 7),
0, TODAY() +0,
1, TODAY() -1,
2, TODAY() -2,
3, TODAY() -3,
4, TODAY() -4,
5, TODAY() -5,
6, TODAY() -6,
TODAY())), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Week Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>