force-app/main/default/objects/Treatment_Session__c/fields/Overall_Session_Grade__c.field-meta.xml
<CustomField>
    <fullName>Overall_Session_Grade__c</fullName>
    <label>Overall Session Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Low/Neutral</fullName>
            </value>
            <value>
                <fullName>2. Mild</fullName>
            </value>
            <value>
                <fullName>3. Moderate</fullName>
            </value>
            <value>
                <fullName>4. Extreme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>