force-app/main/default/objects/Treatment_Session__c/fields/Session_Contact__c.field-meta.xml
<CustomField>
    <fullName>Session_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Session Contacts</relationshipLabel>
    <relationshipName>Treatment_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>