force-app/main/default/objects/Treatment_Session__c/fields/Treatment_BundleId__c.field-meta.xml
<CustomField>
    <fullName>Treatment_BundleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Treatment Bundle</label>
    <referenceTo>Treatment_Bundle__c</referenceTo>
    <relationshipLabel>Treatment Sessions</relationshipLabel>
    <relationshipName>Treatment_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>