force-app/main/default/objects/Treatment_Session__c/fields/Treatment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Plan__c</fullName>
    <label>Treatment Plan</label>
    <referenceTo>Treatment_Plan__c</referenceTo>
    <relationshipLabel>Treatment Sessions</relationshipLabel>
    <relationshipName>Treatment_Sessions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>