force-app/main/default/objects/Treatment_Session__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Treatment_Plan__c</columns>
    <columns>NAME</columns>
    <columns>Animal__c</columns>
    <columns>Preferred_Motivators__c</columns>
    <columns>Session_Notes__c</columns>
    <columns>Session_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>