force-app/main/default/objects/Treatment_Session__c/listViews/Today_s_Treatment_Sessions.listView-meta.xml
<ListView>
    <fullName>Today_s_Treatment_Sessions</fullName>
    <columns>NAME</columns>
    <columns>Animal__c</columns>
    <columns>ASPCA_Animal_Name__c</columns>
    <columns>Session_Date__c</columns>
    <columns>Session_Contact__c</columns>
    <columns>Session_Notes__c</columns>
    <columns>Preferred_Motivators__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Session_Date__c</field>
        <operation>equals</operation>
        <value>LAST_WEEK</value>
    </filters>
    <label>Today&apos;s Treatment Sessions</label>
</ListView>